--- a/about.html
+++ b/about.html
@@ -158,7 +158,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About us</a></li>
-            <li><a href="services.html">pages</a></li>
+            <li><a href="pages.html">pages</a></li>
           </ul>
         </div><!-- End footer links column-->
      </div>
