--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
 
         <div class="row position-relative">
 
-          <div class="col-lg-7 about-img" style="background-image: url(assets/img/a.jpg);"></div>
+          <div class="col-lg-7 about-img" style="background-image: url(assets/img/DrAlghamdi.jpeg);"></div>
 
           <div class="col-lg-7">
             <h2>Supervision of Dr</h2>
